@@ -1,3 +1,11 @@
+2007-12-26  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-utils.c (g_mime_utils_decode_8bit): Made public.
+
+	* gmime/internet-address.c (decode_mailbox): Instead of doing our
+	own thing to convert raw 8bit/multibyte text sequences into UTF-8,
+	use the same function we use in gmime-utils.c's header decoder.
+
 2007-12-25  Jeffrey Stedfast  <fejj@novell.com>
 
 	* gmime/charset-map.c: New source file to generate the charset
